project(sred)

add_executable(sred
        action.c
        boolcmp.c
        chinclus.c
        chiusura.c
        choose.c
        clinchain.c
        clinclus.c
        clincop.c
        closure.c
        coloring.c
        comp.c
        connected.c
        esp_color.c
        exist.c
        existdf.c
        generate.c
        gram.y
        ibincompa.c
        incompat.c
        iobincomp.c
        label.c
        lex.l
        main.c
        makeout.c
        misc.c
        mxcomptbl.c
        newnstate.c
        newoutput.c
        newprime.c
        obincompa.c
        prime.c
        primeones.c
        procargs.c
        qsort.c
        qspart.c
        qspivot.c
        reduced.c
        reductio.h
        solution.c
        strbar.c
        strcom.c
        )

target_link_libraries(sred utility)