pkgdatadir = $(datadir)/$(PACKAGE)/espresso_examples
nobase_dist_pkgdata_DATA = a2.pair fsm.pla \
    indust/accpla indust/al2 indust/alcom indust/alu1 \
    indust/alu2 indust/alu3 indust/amd indust/apla indust/b10 indust/b11 \
    indust/b12 indust/b2 indust/b3 indust/b4 indust/b7 indust/b9 \
    indust/bc0 indust/bca indust/bcb indust/bcc indust/bcd indust/br1 \
    indust/br2 indust/chkn indust/clpl indust/cps indust/dc1 indust/dc2 \
    indust/dekoder indust/dk17 indust/dk27 indust/dk48 indust/ex4 \
    indust/ex5 indust/ex7 indust/exep indust/exp indust/exps indust/gary \
    indust/ibm indust/in0 indust/in1 indust/in2 indust/in3 indust/in4 \
    indust/in5 indust/in6 indust/in7 indust/inc indust/intb indust/jbp \
    indust/lin.rom indust/luc indust/m1 indust/m2 indust/m3 indust/m4 \
    indust/mainpla indust/mark1 indust/max1024 indust/max128 indust/max46 \
    indust/max512 indust/misg indust/mish indust/misj indust/mp2d \
    indust/newapla indust/newapla1 indust/newapla2 indust/newbyte \
    indust/newcond indust/newcpla1 indust/newcpla2 indust/newcwp \
    indust/newill indust/newtag indust/newtpla indust/newtpla1 \
    indust/newtpla2 indust/newxcpla1 indust/opa indust/p82 indust/pdc \
    indust/pope.rom indust/prom1 indust/prom2 indust/risc indust/ryy6 \
    indust/sex indust/shift indust/signet indust/soar.pla indust/spla \
    indust/sqn indust/t1 indust/t2 indust/t3 indust/t4 indust/ti \
    indust/tms indust/ts10 indust/vg2 indust/vtx1 indust/wim indust/x1dn \
    indust/x2dn indust/x6dn indust/x7dn indust/x9dn indust/xparc \
    math/Z5xp1 math/Z9sym math/add6 math/addm4 math/adr4 math/bcd.div3 \
    math/co14 math/dist math/f51m math/l8err math/life math/log8mod \
    math/m181 math/mlp4 math/radd math/rckl math/rd53 math/rd73 math/root \
    math/sqr6 math/sym10 math/tial math/z4 \
    random/bench random/bench1 random/ex1010 random/exam random/fout \
    random/p1 random/p3 random/test1 random/test2 random/test3 \
    random/test4 \
    doc/book.list doc/book.pla doc/info.doc doc/info.ms doc/info.old.ms \
    doc/man.pla doc/man1a.list doc/man1b.list doc/man1u.list doc/other.pla \
    doc/random.stats
